examples/test/testpolicy14484.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14484
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key16: value9
      key14: value2
      key23: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value37
      podSelector:
        matchLabels:
          key11: value33
          key10: value30
